{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 15,
  "lineage": "5663de85-6f26-9752-76e6-45188bdc54a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElasticIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0387b9afd142f2aab",
            "arn": "arn:aws:ec2:eu-north-1:148761667844:elastic-ip/eipalloc-0387b9afd142f2aab",
            "domain": "vpc",
            "id": "eipalloc-0387b9afd142f2aab",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-20-14-133.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.14.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP"
            },
            "tags_all": {
              "Name": "EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f78cb3cc8a4578e",
            "arn": "arn:aws:ec2:eu-north-1:148761667844:instance/i-0b5349634f155867b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5349634f155867b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "public",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02d295c5b71b21f28",
            "private_dns": "ip-10-0-1-192.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-024118c27fec29e5f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e05713586a3d5c7d",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02adf4461835ee4f4"
            ]
          },
          "dependencies": [
            "aws_key_pair.KP",
            "aws_security_group.SG",
            "aws_subnet.PrivateSubnet",
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f78cb3cc8a4578e",
            "arn": "arn:aws:ec2:eu-north-1:148761667844:instance/i-00f5b03ec37042e25",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f5b03ec37042e25",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "public",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04da2c85299729ef8",
            "private_dns": "ip-10-0-0-254.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.254",
            "public_ip": "13.61.194.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c77fb5ae56d25413",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2a64ba2d15f4c8c",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02adf4461835ee4f4"
            ]
          },
          "dependencies": [
            "aws_key_pair.KP",
            "aws_security_group.SG",
            "aws_subnet.PublicSubnet",
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:internet-gateway/igw-06e6f0e520404423f",
            "id": "igw-06e6f0e520404423f",
            "owner_id": "148761667844",
            "tags": {
              "Name": "IG"
            },
            "tags_all": {
              "Name": "IG"
            },
            "vpc_id": "vpc-08a580a5ae304b38f"
          },
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0387b9afd142f2aab",
            "association_id": "eipassoc-0c2e3aeaff4bbbe8d",
            "connectivity_type": "public",
            "id": "nat-0c620148c2dee4ce9",
            "network_interface_id": "eni-073b52043e4b835f5",
            "private_ip": "10.0.0.211",
            "public_ip": "51.20.14.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c2a64ba2d15f4c8c",
            "tags": {
              "Name": "Nat"
            },
            "tags_all": {
              "Name": "Nat"
            }
          },
          "dependencies": [
            "aws_eip.ElasticIP",
            "aws_subnet.PublicSubnet",
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NatRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:route-table/rtb-018f482b20b6d1e20",
            "id": "rtb-018f482b20b6d1e20",
            "owner_id": "148761667844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c620148c2dee4ce9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nat RT"
            },
            "tags_all": {
              "Name": "Nat RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a580a5ae304b38f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ElasticIP",
            "aws_nat_gateway.Nat",
            "aws_subnet.PublicSubnet",
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:route-table/rtb-025bb9404e991b322",
            "id": "rtb-025bb9404e991b322",
            "owner_id": "148761667844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e6f0e520404423f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public RT"
            },
            "tags_all": {
              "Name": "Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a580a5ae304b38f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NatRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05622a7c8185f0b50",
            "route_table_id": "rtb-018f482b20b6d1e20",
            "subnet_id": "subnet-0e05713586a3d5c7d"
          },
          "dependencies": [
            "aws_eip.ElasticIP",
            "aws_nat_gateway.Nat",
            "aws_route_table.NatRT",
            "aws_subnet.PrivateSubnet",
            "aws_subnet.PublicSubnet",
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3b9398ebf1548e3",
            "route_table_id": "rtb-025bb9404e991b322",
            "subnet_id": "subnet-0c2a64ba2d15f4c8c"
          },
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_route_table.name",
            "aws_subnet.PublicSubnet",
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:security-group/sg-02adf4461835ee4f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02adf4461835ee4f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP protocol for FTP",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP protocol for HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow",
            "name_prefix": "",
            "owner_id": "148761667844",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG"
            },
            "tags_all": {
              "Name": "SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a580a5ae304b38f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:subnet/subnet-0e05713586a3d5c7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e05713586a3d5c7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761667844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "tags_all": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-08a580a5ae304b38f"
          },
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:subnet/subnet-0c2a64ba2d15f4c8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2a64ba2d15f4c8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761667844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-08a580a5ae304b38f"
          },
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "newvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:vpc/vpc-08a580a5ae304b38f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b58787a3a276d378",
            "default_route_table_id": "rtb-02c015d890b9405c5",
            "default_security_group_id": "sg-025a58407d0bddf73",
            "dhcp_options_id": "dopt-091547ac6b3b9a432",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a580a5ae304b38f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c015d890b9405c5",
            "owner_id": "148761667844",
            "tags": {
              "Name": "New VPC"
            },
            "tags_all": {
              "Name": "New VPC"
            }
          }
        }
      ]
    }
  ]
}